# ttrpg_system

./: .env.example  .gitignore  Actions.py  AssetManager.py  CharacterManager.py  CompendiumManager.py  ContextTable.py  GeometricManager.py  LayoutManager.py  LightManager.py  MovementManager.py  PaintManager.py  RenderManager.py  TEST_COVERAGE_ANALYSIS.md  TEST_COVERAGE_ANALYSIS_NOV.md  TEST_IMPLEMENTATION_SUMMARY.md  TEST_IMPLEMENTATION_SUMMARY_NOV.md  THIRD_PARTY_NOTICES.md  TODO.md  build_and_deploy.ps1  character_screen.py  client_asset_manager.py  client_protocol.py  client_sdl.py  client_webhook.py  client_webhook_protocol.py  clipboard_sys.py  compendium_manager.py  compendium_sprites.py  context.py  context_menu.py  debug_test.py  dragdrop_sys.py  event_sys.py  gui_imgui.py  gui_sdl.py  imgui_sdl3.py  io_sys.py  layout_manager.py  lighting_sys.py  (+29 more)
apps/server/: alembic.ini  config.py  conftest.py  main.py  package.json  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run_tests.py  ttrpg.db.backup_1773237442
apps/server/api/: game_ws.py  persistent_sessions.py
apps/server/database/: __init__.py  crud.py  database.py  models.py  schema.py  schemas.py  session_utils.py  url.py
apps/server/database/alembic/: README  env.py  script.py.mako
apps/server/database/migrations/: 001_add_obstacle_metadata.py  002_add_character_sprite_linking.py  003_add_token_stats.py  004_add_active_table_id.py  005_add_role_and_invitations.py  006_add_email_verification.py  007_add_password_reset_and_settings.py  008_add_entity_metadata.py  009_add_ban_list.py  010_add_aura_color.py  011_add_character_logs.py  012_add_dynamic_lighting_columns.py  013_add_entity_vision_columns.py  014_add_layer_settings.py  015_add_walls_table.py  016_add_table_coordinate_system.py  017_normalize_legacy_fields.py  018_add_session_rules_and_game_mode.py  019_add_combat_encounter.py  020_add_paint_strokes_table.py  021_add_chat_messages_table.py  022_add_combat_action_journal.py  023_add_table_environment_state.py  024_add_choice_encounters.py  025_normalize_asset_sessions.py  026_drop_legacy_asset_session.py  027_scope_chat_idempotency.py  028_normalize_audit_events.py  029_add_character_permissions.py  030_version_character_documents.py  031_archive_characters.py  032_add_character_drafts.py  __init__.py  run_migrations.py
apps/server/managers/: character_draft_manager.py  character_manager.py
apps/server/models/: __init__.py  auth.py  game.py
apps/server/routers/: audit.py  auth.py  compendium.py  demo.py  game.py  invitations.py  telemetry.py  users.py
apps/server/scripts/: extract_protocol_mixins.py  import_sqlite_to_postgresql.py  migrate_and_start.py  package_web_ui.py  seed_test_session.py  update_vite_assets.py
apps/server/service/: action_resolver.py  asset_manager.py  attack_resolver.py  character_draft_schema.py  character_rules.py  character_schema.py  choice_encounter_persistence_service.py  combat_command_service.py  combat_engine.py  combat_persistence_service.py  combat_state_presenter.py  combatant_factory.py  compendium_artifact.py  email.py  encounter_engine.py  game_session.py  game_session_protocol.py  movement_validator.py  npc_ai.py  readiness.py  rules_engine.py  server_protocol.py  spell_resolver.py
apps/server/service/protocol/: __init__.py  _protocol_base.py  assets.py  auth.py  base.py  characters.py  chat.py  combat.py  encounter.py  helpers.py  measurements.py  paint.py  paint_templates.py  players.py  session.py  sprites.py  tables.py  walls.py
apps/server/static/css/: pages.css  theme.css
apps/server/storage/: __init__.py  r2_manager.py
apps/server/templates/: admin_assets.html  admin_panel.html  auth_error.html  dashboard.html  forgot_password_sent.html  game_client.html  game_session.html  session_settings.html  vite_assets.html  websocket_test.html
apps/server/tests/: conftest.py
apps/server/tests/benchmarks/: bench_movement.py
apps/server/tests/e2e/: test_game_flow.py  test_invitation_admin_flow.py  test_websocket.py
apps/server/tests/integration/: test_admin_routes.py  test_alembic_baseline.py  test_auth_routes.py  test_compendium_routes.py  test_game_routes.py  test_invitation_routes.py  test_password_reset_settings.py  test_postgresql_contract.py  test_user_routes.py
apps/server/tests/legacy/: test_character_system.py
apps/server/tests/loadtest/: locustfile.py
apps/server/tests/unit/: test_action_commit.py  test_asset_migration.py  test_asset_storage.py  test_attack_resolver.py  test_audit.py  test_audit_migration.py  test_audit_routes.py  test_auth.py  test_auth_protocol.py  test_backup_database.py  test_batch_message.py  test_browser_telemetry.py  test_character_drafts.py  test_character_overhaul.py  test_character_permission_migration.py  test_character_protocol.py  test_character_schema.py  test_chat_migration.py  test_chat_protocol.py  test_choice_encounter_persistence_service.py  test_combat_command_service.py  test_combat_engine.py  test_combat_persistence.py  test_combat_protocol.py  test_combat_state_presenter.py  test_combatant_factory.py  test_compendium_manifest_tool.py  test_concentration.py  test_config_security.py  test_connection_shutdown.py  test_cover_resolution.py  test_crud.py  test_damage_resistance.py  test_dashboard.py  test_database_configuration.py  test_death_saves.py  test_demo_system.py  test_dynamic_lighting.py  test_email_verification.py  test_encounter_engine.py  (+41 more)
apps/server/tests/utils/: factories.py  (+1 more)
apps/server/utils/: audit.py  http_security.py  logger.py  observability.py  rate_limiter.py  roles.py  security.py
clients/web/rust-core/: Cargo.toml
(+1948 files in other folders)
