[project]
name = "ttrpg-server"
version = "0.1.0"
requires-python = ">=3.11"
description = "TTRPG system FastAPI server"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "aiohttp>=3.10.0",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "email-validator>=2.0.0",
    "jinja2>=3.1.2",
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "authlib>=1.3.0",
    "httpx>=0.24.0",
    "boto3>=1.34.0",
    "resend>=2.0.0",
    "python-dotenv>=1.0.0",
    "xxhash>=3.4.0",
    "itsdangerous>=2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
