[package]
name = "ttrpg-rust-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

# ===== LOGGING FEATURES (RUST WASM BEST PRACTICES) =====
# Optional features for conditional compilation of log levels
# Use --features="log-debug" to enable debug logging
# Production builds should not include any log features for optimal performance
[features]
default = []
log-trace = []
log-debug = []
log-info = []
log-warn = []
# Development feature bundle (enables all logging)
dev-logging = ["log-trace", "log-debug", "log-info", "log-warn"]
# Memory allocator feature
wee_alloc = []

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
indexmap = { version = "2.0", features = ["serde"] }
gloo-net = "0.4"
gloo-utils = "0.2"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }


# Math and graphics
nalgebra = "0.32"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }

# Async
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt"], default-features = false }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "ImageData",
  "WebSocket",
  "MessageEvent",
  "CloseEvent",
  "ErrorEvent",
  "CustomEvent",
  "CustomEventInit",
  "WebGl2RenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "WebGlBuffer",
  "WebGlTexture",
  "WebGlFramebuffer",
  "WebGlUniformLocation",
  "Window",
  "Document",
  "Element",
  "MouseEvent",
  "KeyboardEvent",
  "WheelEvent",
  "TouchEvent",
  "DragEvent",
  "Performance",
  "DomRect",
  "IdbFactory",
  "IdbDatabase",
  "IdbObjectStore",
  "IdbTransaction",
  "IdbTransactionMode",
  "IdbRequest",
  "IdbOpenDbRequest",
  "IdbIndex",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
