[package]
name = "ttrpg-rust-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# ===== LOGGING FEATURES (RUST WASM BEST PRACTICES) =====
# Optional features for conditional compilation of log levels
# Use --features="log-debug" to enable debug logging
# Production builds should not include any log features for optimal performance
[features]
default = []
log-trace = []
log-debug = []
log-info = []
log-warn = []
# Development feature bundle (enables all logging)
dev-logging = ["log-trace", "log-debug", "log-info", "log-warn"]
# Memory allocator feature
wee_alloc = []

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "CanvasRenderingContext2d",
  "CanvasGradient",
  "HtmlCanvasElement",
  "WebSocket",
  "MessageEvent",
  "CloseEvent",
  "ErrorEvent",
  "Window",
  "Document",
  "Element",
  "MouseEvent",
  "KeyboardEvent",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
quickcheck = "1.0"
quickcheck_macros = "1.0"

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
